--- a/index.ipynb
+++ b/index.ipynb
@@ -39,9 +39,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CONTRIBUTING.md  index.ipynb  LICENSE.md  README.md  school.py\r\n"
+     ]
+    }
+   ],
    "source": [
     "ls"
    ]
