Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -39,20 +39,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CONTRIBUTING.md  index.ipynb  LICENSE.md  README.md  school.py\r\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-c5e6d29ad1aa>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-c5e6d29ad1aa>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    touch 'school.py'\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
-   "source": [
-    "touch 'school'"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
