Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -51,7 +51,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "jupyter notebook \"school\""
+   ]
   },
   {
    "cell_type": "code",
